--- a/.editorconfig
+++ b/.editorconfig
@@ -14,5 +14,11 @@ quote_type = single
 [*.php]
 indent_size = 4
 
+[*.json]
+indent_style = space
+indent_size = 4
+
+[*.yml]
+
 [*.md]
 trim_trailing_whitespace = false
