--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
-    "description": "WordPress plugin that integrates your WordPress site with the Bluehost control panel, including performance, security, and update features.",
-    "license": "GPL-2.0-or-later",
+    "name": "bluehost-wordpress-plugin",
     "version": "3.6.0",
+    "description": "WordPress plugin that integrates your WordPress site with the Bluehost control panel, including performance, security, and update features.",
+    "author": {
+        "name": "Bluehost",
+        "url": "https://www.bluehost.com/"
+    },
+    "license": "GPL-2.0-or-later",
+    "keywords": [
+        "bluehost",
+        "wordpress",
+        "plugin"
+    ],
+    "homepage": "https://github.com/bluehost/bluehost-wordpress-plugin#readme",
     "private": true,
     "repository": {
         "type": "git",
@@ -10,7 +21,6 @@
     "bugs": {
         "url": "https://github.com/bluehost/bluehost-wordpress-plugin/issues"
     },
-    "homepage": "https://github.com/bluehost/bluehost-wordpress-plugin#readme",
     "contributors": [
         "Abdulrahman Al Ani (https://alani.dev/)",
         "Evan Mullins (https://evanmullins.com)",
