Break i18n command into two commands & run them concurrently

--- a/package.json
+++ b/package.json
@@ -77,7 +77,9 @@
         "cypress": "npm cypress open",
         "develop:analyzer": "npm run start:analyzer",
         "develop": "npm run start",
-        "i18n": "wpi18n addtextdomain && composer run i18n",
+        "i18n:js": "npm run wpi18n addtextdomain",
+        "i18n:php": "composer run i18n",
+        "i18n": "concurrently \"npm:i18n:*\"",
         "lint:css": "wp-scripts lint-style '**/*.css'",
         "lint:fix": "concurrently \"npm:lint:*fix\"",
         "lint:js:fix": "wp-scripts lint-js ./src --fix",
