--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,8 @@
     }
   },
   "scripts": {
-    "fix": "vendor/bin/phpcbf .",
-    "lint": "vendor/bin/phpcs -s .",
+    "fix": "./vendor/bin/phpcbf --standard=./.phpcs.dist.xml",
+    "lint": "./vendor/bin/phpcs --standard=./.phpcs.dist.xml",
     "i18n": [
       "vendor/bin/wp i18n make-pot . ./languages/bluehost-wordpress-plugin.pot --headers=Report-Msgid-Bugs-To:https://github.com/bluehost/bluehost-wordpress-plugin/issues --exclude=assets,storybook,tests,src",
       "vendor/bin/wp i18n make-pot . ./languages/bluehost-wordpress-plugin.pot --headers=POT-Creation-Date:null --exclude=assets,storybook,tests,src"
