--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -59,5 +59,5 @@ jobs:
         if: "!! env.GIT_DIFF"
 
       - name: Detecting PHP Code Standards Violations
-        run: vendor/bin/phpcs --standard=phpcs.xml -s ${{ env.GIT_DIFF }}
+        run: composer run-script lint
         if: "!! env.GIT_DIFF"
