--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
         "lint:fix": "concurrently \"npm:lint:*fix\"",
         "lint:js:fix": "wp-scripts lint-js ./src --fix",
         "lint:js": "wp-scripts lint-js ./src",
-        "lint:php": "composer run lint",
+        "lint:php": "composer run test",
         "lint:php:fix": "composer run fix",
         "lint:pkg-json": "wp-scripts lint-pkg-json",
         "lint:yml": "yamllint --ignore=node_modules/** --ignore=vendor/** **/*.yml",
