Update technote-space/get-diff-action action to use correct var for patterns

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -34,7 +34,7 @@ jobs:
 
       - uses: technote-space/get-diff-action@v6
         with:
-          SUFFIX_FILTER: .php
+          PATTERNS: '**.php'
 
       - name: Get Composer cache directory
         id: composer-cache
