--- a/composer.json
+++ b/composer.json
@@ -36,25 +36,29 @@
     }
   },
   "scripts": {
-    "fix": "@fix:standards",
     "fix:standards": [
         "./vendor/bin/phpcbf --standard=./.phpcs.dist.xml",
         "PHP_CS_FIXER_IGNORE_ENV=true ./vendor/bin/php-cs-fixer fix -v --diff"
     ],
+    "fix": "@fix:standards",
+    "i18n": [
+      "vendor/bin/wp i18n make-pot . ./languages/bluehost-wordpress-plugin.pot --headers=Report-Msgid-Bugs-To:https://github.com/bluehost/bluehost-wordpress-plugin/issues --exclude=assets,storybook,tests,src",
+      "vendor/bin/wp i18n make-pot . ./languages/bluehost-wordpress-plugin.pot --headers=POT-Creation-Date:null --exclude=assets,storybook,tests,src"
+    ],
+    "lint": "@test",
     "test": "@test:standards",
     "test:standards": [
         "./vendor/bin/phpcs --standard=./.phpcs.dist.xml",
         "PHP_CS_FIXER_IGNORE_ENV=true ./vendor/bin/php-cs-fixer fix -v --diff --dry-run"
-    ],
-    "i18n": [
-      "vendor/bin/wp i18n make-pot . ./languages/bluehost-wordpress-plugin.pot --headers=Report-Msgid-Bugs-To:https://github.com/bluehost/bluehost-wordpress-plugin/issues --exclude=assets,storybook,tests,src",
-      "vendor/bin/wp i18n make-pot . ./languages/bluehost-wordpress-plugin.pot --headers=POT-Creation-Date:null --exclude=assets,storybook,tests,src"
     ]
   },
   "scripts-descriptions": {
-    "fix": "Automatically fix coding standards issues where possible.",
-    "lint": "Check files against coding standards.",
-    "i18n": "Generate a .pot file for translation."
+    "fix:standards": "Automatically fix coding standards issues where possible.",
+    "fix": "Run all fix scripts, currently just the code standards.",
+    "i18n": "Generate a .pot file for translation.",
+    "lint": "Backwards compatibility alias for test.",
+    "test:standards": "Check coding standards.",
+    "test": "Run all test scripts, currently just the code standards."
   },
   "require-dev": {
     "dealerdirect/phpcodesniffer-composer-installer": "@stable",
@@ -68,26 +72,6 @@
     "wp-phpunit/wp-phpunit": "^6.3.1"
   },
   "require": {
-    "newfold-labs/wp-module-business-reviews": "^1.1.1",
-    "newfold-labs/wp-module-coming-soon": "^1.1.12",
-    "newfold-labs/wp-module-ctb": "^1.1.2",
-    "newfold-labs/wp-module-customer-bluehost": "^1.6.0",
-    "newfold-labs/wp-module-data": "^2.4.13",
-    "newfold-labs/wp-module-deactivation": "^1.0.3",
-    "newfold-labs/wp-module-ecommerce": "^1.3.9",
-    "newfold-labs/wp-module-global-ctb": "^1.0.9",
-    "newfold-labs/wp-module-help-center": "1.0.21",
-    "newfold-labs/wp-module-loader": "^1.0.10",
-    "newfold-labs/wp-module-marketplace": "^2.1.0",
-    "newfold-labs/wp-module-notifications": "^1.2.1",
-    "newfold-labs/wp-module-onboarding": "^1.11.8",
-    "newfold-labs/wp-module-patterns": "^0.1.10",
-    "newfold-labs/wp-module-performance": "^1.2.2",
-    "newfold-labs/wp-module-runtime": "^1.0.7",
-    "newfold-labs/wp-module-secure-passwords": "^1.1",
-    "newfold-labs/wp-module-sso": "^1.0.4",
-    "newfold-labs/wp-module-staging": "^1.1.1",
-    "wp-forge/wp-update-handler": "^1.0",
-    "wp-forge/wp-upgrade-handler": "^1.0"
+    "newfold-labs/wp-module-business-reviews": "^1.1.1"
   }
 }
