--- a/composer.json
+++ b/composer.json
@@ -1,77 +1,97 @@
 {
-  "name": "bluehost/bluehost-wordpress-plugin",
-  "description": "WordPress plugin that integrates your WordPress site with the Bluehost control panel, including performance, security, and update features.",
-  "type": "wordpress-plugin",
-  "license": [
-    "GPL-2.0-or-later"
-  ],
-  "authors": [
-    {
-      "name": "Evan Mullins",
-      "homepage": "https://evanmullins.com"
-    }
-  ],
-  "config": {
-    "optimize-autoloader": true,
-    "sort-packages": true,
-    "platform": {
-      "php": "7.1.0"
+    "name": "bluehost/bluehost-wordpress-plugin",
+    "description": "WordPress plugin that integrates your WordPress site with the Bluehost control panel, including performance, security, and update features.",
+    "type": "wordpress-plugin",
+    "license": [
+      "GPL-2.0-or-later"
+    ],
+    "authors": [
+      {
+        "name": "Evan Mullins",
+        "homepage": "https://evanmullins.com"
+      }
+    ],
+    "config": {
+      "optimize-autoloader": true,
+      "sort-packages": true,
+      "platform": {
+        "php": "7.1.0"
+      },
+      "platform-check": false,
+      "allow-plugins": {
+        "dealerdirect/phpcodesniffer-composer-installer": true
+      },
+      "preferred-install": {
+        "newfold-labs/*": "source",
+        "*": "dist"
+      }
     },
-    "platform-check": false,
-    "allow-plugins": {
-      "dealerdirect/phpcodesniffer-composer-installer": true
+    "repositories": {
+      "newfold": {
+        "type": "composer",
+        "url": "https://newfold-labs.github.io/satis/",
+        "only": [
+          "newfold-labs/*"
+        ]
+      }
     },
-    "preferred-install": {
-      "newfold-labs/*": "source",
-      "*": "dist"
-    }
-  },
-  "repositories": {
-    "newfold": {
-      "type": "composer",
-      "url": "https://newfold-labs.github.io/satis/",
-      "only": [
-        "newfold-labs/*"
+    "scripts": {
+      "fix:standards": [
+          "./vendor/bin/phpcbf --standard=./.phpcs.dist.xml",
+          "PHP_CS_FIXER_IGNORE_ENV=true ./vendor/bin/php-cs-fixer fix -v --diff"
+      ],
+      "fix": "@fix:standards",
+      "i18n": [
+        "vendor/bin/wp i18n make-pot . ./languages/bluehost-wordpress-plugin.pot --headers=Report-Msgid-Bugs-To:https://github.com/bluehost/bluehost-wordpress-plugin/issues --exclude=assets,storybook,tests,src",
+        "vendor/bin/wp i18n make-pot . ./languages/bluehost-wordpress-plugin.pot --headers=POT-Creation-Date:null --exclude=assets,storybook,tests,src"
+      ],
+      "lint": "@test",
+      "test": "@test:standards",
+      "test:standards": [
+          "./vendor/bin/phpcs --standard=./.phpcs.dist.xml",
+          "PHP_CS_FIXER_IGNORE_ENV=true ./vendor/bin/php-cs-fixer fix -v --diff --dry-run"
       ]
+    },
+    "scripts-descriptions": {
+      "fix:standards": "Automatically fix coding standards issues where possible.",
+      "fix": "Run all fix scripts, currently just the code standards.",
+      "i18n": "Generate a .pot file for translation.",
+      "lint": "Backwards compatibility alias for test.",
+      "test:standards": "Check coding standards.",
+      "test": "Run all test scripts, currently just the code standards."
+    },
+    "require-dev": {
+      "dealerdirect/phpcodesniffer-composer-installer": "@stable",
+      "friendsofphp/php-cs-fixer": "^2.19",
+      "newfold-labs/wp-php-standards": "^1.2",
+      "phpcompatibility/phpcompatibility-wp": "@stable",
+      "roave/security-advisories": "dev-latest",
+      "squizlabs/php_codesniffer": "@stable",
+      "wp-cli/i18n-command": "^2.4.4",
+      "wp-coding-standards/wpcs": "^3.0",
+      "wp-phpunit/wp-phpunit": "^6.3.1"
+    },
+    "require": {
+      "newfold-labs/wp-module-business-reviews": "^1.1.1",
+      "newfold-labs/wp-module-coming-soon": "^1.1.12",
+      "newfold-labs/wp-module-ctb": "^1.1.2",
+      "newfold-labs/wp-module-customer-bluehost": "^1.6.0",
+      "newfold-labs/wp-module-data": "^2.4.13",
+      "newfold-labs/wp-module-deactivation": "^1.0.3",
+      "newfold-labs/wp-module-ecommerce": "^1.3.9",
+      "newfold-labs/wp-module-global-ctb": "^1.0.9",
+      "newfold-labs/wp-module-help-center": "1.0.21",
+      "newfold-labs/wp-module-loader": "^1.0.10",
+      "newfold-labs/wp-module-marketplace": "^2.1.0",
+      "newfold-labs/wp-module-notifications": "^1.2.1",
+      "newfold-labs/wp-module-onboarding": "^1.11.8",
+      "newfold-labs/wp-module-patterns": "^0.1.10",
+      "newfold-labs/wp-module-performance": "^1.2.2",
+      "newfold-labs/wp-module-runtime": "^1.0.7",
+      "newfold-labs/wp-module-secure-passwords": "^1.1",
+      "newfold-labs/wp-module-sso": "^1.0.4",
+      "newfold-labs/wp-module-staging": "^1.1.1",
+      "wp-forge/wp-update-handler": "^1.0",
+      "wp-forge/wp-upgrade-handler": "^1.0"
     }
-  },
-  "scripts": {
-    "fix:standards": [
-        "./vendor/bin/phpcbf --standard=./.phpcs.dist.xml",
-        "PHP_CS_FIXER_IGNORE_ENV=true ./vendor/bin/php-cs-fixer fix -v --diff"
-    ],
-    "fix": "@fix:standards",
-    "i18n": [
-      "vendor/bin/wp i18n make-pot . ./languages/bluehost-wordpress-plugin.pot --headers=Report-Msgid-Bugs-To:https://github.com/bluehost/bluehost-wordpress-plugin/issues --exclude=assets,storybook,tests,src",
-      "vendor/bin/wp i18n make-pot . ./languages/bluehost-wordpress-plugin.pot --headers=POT-Creation-Date:null --exclude=assets,storybook,tests,src"
-    ],
-    "lint": "@test",
-    "test": "@test:standards",
-    "test:standards": [
-        "./vendor/bin/phpcs --standard=./.phpcs.dist.xml",
-        "PHP_CS_FIXER_IGNORE_ENV=true ./vendor/bin/php-cs-fixer fix -v --diff --dry-run"
-    ]
-  },
-  "scripts-descriptions": {
-    "fix:standards": "Automatically fix coding standards issues where possible.",
-    "fix": "Run all fix scripts, currently just the code standards.",
-    "i18n": "Generate a .pot file for translation.",
-    "lint": "Backwards compatibility alias for test.",
-    "test:standards": "Check coding standards.",
-    "test": "Run all test scripts, currently just the code standards."
-  },
-  "require-dev": {
-    "dealerdirect/phpcodesniffer-composer-installer": "@stable",
-    "friendsofphp/php-cs-fixer": "^2.19",
-    "newfold-labs/wp-php-standards": "^1.2",
-    "phpcompatibility/phpcompatibility-wp": "@stable",
-    "roave/security-advisories": "dev-latest",
-    "squizlabs/php_codesniffer": "@stable",
-    "wp-cli/i18n-command": "^2.4.4",
-    "wp-coding-standards/wpcs": "^3.0",
-    "wp-phpunit/wp-phpunit": "^6.3.1"
-  },
-  "require": {
-    "newfold-labs/wp-module-business-reviews": "^1.1.1"
   }
-}
